Update Bootstrap and Thankou page

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     <form action="https://formsubmit.co/samuelson.pajeu@gmail.com" method="POST" >
                         <div class="row">
                                 <input type="hidden" name="_subject" value="Portifolio - Contact Form">
-                                <input type="hidden" name="_next" value="thankyou.html" >
+                                <input type="hidden" name="_next" value="https://samuelsonpajeu.github.io/thankyou.html" >
                             <div class="col-sm-6">
                                 <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
                             </div>
