--- a/thankyou.html
+++ b/thankyou.html
@@ -33,7 +33,8 @@
 
     <!-- Custom styles for this template -->
     <link href="assets/css/style.css" rel="stylesheet">
-
+    
+    <!-- IMAGE NAME CHANGED -->
 
 
 </head>
