--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                 <div class="portfolio-item-info">
                                     <h4>Universidade Unidecode</h4>
                                     <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                    <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                    <a href="https://play.google.com/store/apps/details?id=samuelson.pajeu.unidecode"><span class="glyphicon glyphicon-link"></span></a>
                                 </div><!-- /.portfolio-item-info -->
                             </div><!-- /.portfolio-item -->
                         </div>
@@ -353,7 +353,7 @@
             <p></p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <a href="https://play.google.com/store/apps/details?id=samuelson.pajeu.unidecode" class="btn btn-fill">Android</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
