thanku page fix

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 </div>
             </div>
         </div>
-    </footer>/#footer
+    </footer>
 
     <!-- Modals -->
     <div id="portfolioItem1" class="modal fade" role="dialog">
