--- a/httpfoxes.html
+++ b/httpfoxes.html
@@ -6,9 +6,11 @@
     .thumb-image {
         display: block;
         width: 20vw;
-        height: 30vh;
-        max-width: 100%;
-        max-height: 100%;
+        height: 20vh;
+        max-width: 400px;
+        max-height: 300px;
+        min-width: 300px;
+        min-height: 200px;
         object-fit: cover;
     }
 
