chore: change http-foxes webservice

--- a/httpfoxes.html
+++ b/httpfoxes.html
@@ -48,7 +48,7 @@
                     <h4 class="largeLink">
                         <span class="popUp" id="popUpFoxes">Copied!</span>
                         <span class="get" onclick="copyToClipboard('linkFoxes', 'popUpFoxes')">GET</span>
-                        <div class="getLink" id="linkFoxes">https://http-foxes-api.herokuapp.com/foxes</div>
+                        <div class="getLink" id="linkFoxes">https://http-foxes-api.onrender.com/foxes</div>
                         <a class="showValues" draggable="false" onclick="toggleList()">
                             Show Return Values
                         </a>
